--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
         "@swc/jest": "^0.2.26",
         "@types/jest": "^29.5.2",
         "@types/jstoxml": "^2.0.4",
+        "@types/supertest": "^2.0.12",
+        "@types/uuid": "^8.3.4",
         "jest": "^29.5.0",
         "supertest": "^6.3.3",
         "ts-node": "^10.9.1",
@@ -13,11 +15,13 @@
     },
     "scripts": {
         "test": "npm run tsc -- --noEmit && jest",
-        "tsc": "tsc"
+        "tsc": "tsc",
+        "server": "nodemon src/api/server.ts"
     },
     "dependencies": {
         "@types/express": "^4.17.20",
         "@types/uuid": "^9.0.2",
+        "@types/umzug": "^2.3.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jstoxml": "^3.2.10",
@@ -27,6 +31,7 @@
         "sequelize-typescript": "^2.1.5",
         "sqlite3": "^5.1.6",
         "uuid": "^9.0.0",
-        "yup": "^1.3.2"
+        "yup": "^1.3.2",
+        "umzug": "^3.2.1"
     }
 }
